vpc.tf
provider "aws" {
      region     = "${var.region}"
      access_key = "${var.access_key}"
      secret_key = "${var.secret_key}"
 } 
 resource "aws_vpc" "vpc" {
     cidr_block = "10.11.219.0/24"
 }


resource "aws_internet_gateway" "igw" {
     vpc_id = "${aws_vpc.vpc.id}"
 }
 resource "aws_route" "route_inet" {
     route_table_id         = "${aws_vpc.vpc.main_route_table_id}"
     destination_cidr_block = "0.0.0.0/0"
     gateway_id             = "${igw.id}
 }
 data "aws_availability_zones" "available" {}
 
 resource "aws_subnet" "main" {
    count                   = "${length(data.aws_availability_zones.available.names)}"
    vpc_id                  = "${aws_vpc.vpc.id}"
    cidr_block              = "10.110.${couni .index}.0/24"
    map_public_ip_on_launch = true
    availability_zone       = "${element(data.aws_availability_zones.available.names, count.index)}"
 }
